--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emailjs": "^4.0.1",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "swiper": "^9.0.3",
